# leo_examples

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/follow_ar_tag/: alvar.yaml  follow_ar_tag.yaml
launch/: follow_ar_tag.launch
leo_example_follow_ar_tag/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_example_follow_ar_tag/config/: alvar.yaml  follow_ar_tag.yaml
leo_example_follow_ar_tag/launch/: follow_ar_tag.launch
leo_example_follow_ar_tag/scripts/: follow_ar_tag.py
leo_example_line_follower/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_example_line_follower/cfg/: ColorMask.cfg
leo_example_line_follower/config/: blue.yaml  my_vals.yaml  red.yaml
leo_example_line_follower/launch/: color_mask.launch  line_follower.launch  record_data.launch
leo_example_line_follower/models/: color_mask_model.tflite  first_model.tflite  second_model.tflite  smaller_mask.tflite  third-model.tflite
leo_example_line_follower/notebooks/: leorover-line-follower.ipynb
leo_example_line_follower/scripts/: color_mask.py  data_saver.py  line_follower.py  prepare_data.py
leo_example_object_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_example_object_detection/cfg/: Confidence.cfg
leo_example_object_detection/config/: label_colors.yaml
leo_example_object_detection/launch/: detector.launch
leo_example_object_detection/scripts/: object_detector.py
leo_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
scripts/: follow_ar_tag.py
