<?xml version="1.0"?>
<package format="2">
  <name>leo_example_follow_ar_tag</name>
  <version>0.1.1</version>
  <description>
    Follow ARTag Example for Leo Rover.
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Should be uncommented once ar_track_alvar is released to Noetic -->
  <!-- <exec_depend>ar_track_alvar</exec_depend> -->

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
